--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Mechanics"
 description: "Mechanics chapter site of The Failed Astrophysicist"
-url: "https://thefailedastrophysicist.github.io/"
+url: "https://thefailedastrophysicist.github.io"
 baseurl: "/mechanics"
 theme: minima
 
